# java-parser

./: .gitignore  .stylish-haskell.yaml  .travis.yml  Language-Java-Helper.html  Language-Java-Java.html  Language-Java-Lenses-Java.html  Language-Java-Lenses-Syntax-Exp.html  Language-Java-Lenses-Syntax-Types.html  Language-Java-Lenses-Syntax.html  Language-Java-Lexer.html  Language-Java-Parser.html  Language-Java-Position.html  Language-Java-Pretty.html  Language-Java-Syntax.html  Language-Java-SyntaxClasses.html  README.markdown  bench.html  benchOld.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-V.html  doc-index-W.html  (+18 more)
Language/Java/: Helper.hs  ModuleLexer.x  Parser.hs  Position.hs  Pretty.hs  Syntax.hs  SyntaxClasses.hs
Language/Java/Lenses/: CustomLenses.hs  Lenses.hs  Syntax.hs
Language/Java/Lenses/Syntax/: Exp.hs  Types.hs
Language/Java/Prisms/: CustomLenses.hs  Prisms.hs  Syntax.hs
Language/Java/Prisms/Syntax/: Exp.hs  Types.hs
Language/Java/Syntax/: Lib.hs  Types.hs
bench/: Bench.hs
benchmark/: Bench.hs  BenchClasses.hs
doc/adjunctions-4.3/: adjunctions.haddock
doc/all/docs/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-35.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-63.html  doc-index-64.html  doc-index-92.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  (+9 more)
doc/base-orphans-0.5.4/: base-orphans.haddock
doc/bifunctors-5.4.2/: bifunctors.haddock
doc/comonad-5.0.1/: comonad.haddock
doc/contravariant-1.4/: contravariant.haddock
doc/distributive-0.5.2/: distributive.haddock
doc/docs/: doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index.html  index.html
doc/free-4.12.4/: free.haddock
doc/hashable-1.2.6.1/: hashable.haddock
doc/kan-extensions-5.0.2/: kan-extensions.haddock
doc/language-java-0.2.8/: language-java.haddock
doc/lens-4.15.1/: lens.haddock
doc/parsec-3.1.11/: parsec.haddock
doc/profunctors-5.2/: profunctors.haddock
doc/semigroupoids-5.1/: semigroupoids.haddock
doc/semigroups-0.18.2/: semigroups.haddock
doc/unordered-containers-0.2.8.0/: unordered-containers.haddock
java/bad/: RealLifeJava.java
java/good/: DiamondAnonymousClass.java  RealLifeJava.java  annotation.java  miscMath.java  miscMath2.java  miscMath3.java  miscMath4.java  miscMath5.java  module-info.java  rawTypes.java  test.java  throws.java  typeVarMembers.java
src/: Language.Java.Helper.html  Language.Java.Java.html  Language.Java.Lenses.CustomLenses.html  Language.Java.Lenses.Java.html  Language.Java.Lenses.Syntax.Exp.html  Language.Java.Lenses.Syntax.Types.html  Language.Java.Lenses.Syntax.html  Language.Java.Lexer.html  Language.Java.Parser.html  Language.Java.Position.html  Language.Java.Pretty.html  Language.Java.Syntax.Exp.html  Language.Java.Syntax.Types.html  Language.Java.Syntax.html  Language.Java.SyntaxClasses.html
src/Language/Java/: Java.hs  Lexer.x  Parser.hs  Position.hs  Syntax.hs
src/Language/Java/Lenses/: Java.hs  Syntax.hs
src/Language/Java/Lenses/Syntax/: Exp.hs  Types.hs
src/Language/Java/Syntax/: Types.hs
tests/: Arbitrary.hs  Tests.hs
tests/java/good/: InterfaceDefaults.java  TryWithEffectivelyFinal.java  module-info.java
