Name:                   language-java
Version:                0.2.8
License:                BSD3
License-File:           LICENSE
Author:                 Niklas Broberg, Julian Brendl, Leander Kurscheidt
Maintainer:             Julian Brendl, Leander Kurscheidt
Category:               Language
Synopsis:               Java source manipulation
Description:            Manipulating Java source: abstract syntax, lexer, parser, and pretty-printer. Based on language-java.
Homepage:               http://github.com/exemplator/java-parser
Stability:              Experimental
Build-Type:             Simple
Cabal-Version:          >= 1.8

Extra-Source-Files:
    tests/java/good/*.java
    tests/java/bad/*.java
    Language/Java/Lexer.x

source-repository head
  type:                 git
  location:             git://github.com/exemplator/java-parser

Library
  Build-Tools:          alex >= 3.1.3
  Build-Depends:        base >= 4 && < 5
                      , array >= 0.1
                      , pretty >= 1.0
                      , parsec >= 3.0
                      , lens >= 4.15.1
                      , template-haskell

  ghc-options:         -Wall -fwarn-tabs -fno-warn-missing-signatures

  Exposed-modules:      Language.Java.Lexer,
                        Language.Java.Syntax,
                        Language.Java.Parser,
                        Language.Java.Pretty,
                        Language.Java.Position,
                        Language.Java.Helper,
                        Language.Java.Prisms.Syntax,
                        Language.Java.Prisms.Syntax.Exp,
                        Language.Java.Prisms.Syntax.Types,
                        Language.Java.Prisms.Prisms
  
  Other-modules:        Language.Java.Syntax.Types,
                        Language.Java.Syntax.Exp,
                        Language.Java.Prisms.CustomLenses


Test-Suite test-java-parse
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           Tests.hs
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , tasty
                   , tasty-quickcheck
                   , tasty-hunit
                   , language-java
                   , filepath
                   , directory
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
