Name:                   language-java
Version:                0.2.8
License:                BSD3
License-File:           LICENSE
Author:                 Niklas Broberg, Julian Brendl, Leander Kurscheidt
Maintainer:             Julian Brendl, Leander Kurscheidt
Category:               Language
Synopsis:               Java source manipulation
Description:            Manipulating Java source: abstract syntax, lexer, parser, and pretty-printer. Based on language-java.
Homepage:               http://github.com/exemplator/java-parser
Stability:              Experimental
Build-Type:             Simple
Cabal-Version:          >= 1.8

Extra-Source-Files:
    java/good/*.java
    java/bad/*.java
    src/Language/Java/Lexer.x

source-repository head
  type:                 git
  location:             git://github.com/exemplator/java-parser

Library
  hs-source-dirs:       src
  Build-Tools:          alex >= 3.1.3
  Build-Depends:        base >= 4 && < 5
                      , array >= 0.1
                      , pretty >= 1.0
                      , megaparsec >= 6.1.0
                      , lens >= 4.15.1
                      , template-haskell
                      , containers

  ghc-options:         -Wall -fwarn-tabs -fno-warn-missing-signatures

  Exposed-modules:      Language.Java.Lexer,
                        Language.Java.Syntax,
                        Language.Java.Java,
                        Language.Java.Parser,
                        Language.Java.Pretty,
                        Language.Java.Position,
                        Language.Java.Helper,
                        Language.Java.Lenses.Syntax,
                        Language.Java.Lenses.Syntax.Exp,
                        Language.Java.Lenses.Syntax.Types,
                        Language.Java.Lenses.Java,
                        Language.Java.SyntaxClasses
  
  Other-modules:        Language.Java.Syntax.Types,
                        Language.Java.Syntax.Exp,
                        Language.Java.Lenses.CustomLenses


Test-Suite test-java-parse
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           Tests.hs
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , tasty
                   , tasty-quickcheck
                   , tasty-hunit
                   , language-java
                   , filepath
                   , directory

  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures

  Other-modules:     Arbitrary

Benchmark bench-java-parse
  type:              exitcode-stdio-1.0
  hs-source-dirs:    benchmark
  main-is:           Bench.hs
  build-depends:     base
                   , criterion
                   , deepseq
                   , language-java
                   , filepath
                   , directory
  other-modules:   BenchClasses                 
